--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-   "name": "@onah/paginationah",
-   "version": "1.0.9",
+   "name": "paginationah",
+   "version": "1.1.0",
    "main": "dist/pagination.js",
    "types": "dist/pagination.d.ts",
    "type": "module",
+   "repository": {
+      "url": "https://github.com/sundayonah/paginationah"
+   },
    "scripts": {
       "build": "tsc",
       "test": "jest",
@@ -13,7 +16,7 @@
       "dist"
    ],
    "keywords": [
-      "pagination",
+      "paginationah",
       "typescript",
       "npm"
    ],
